--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
 
   <footer>
     <div class="container">
-      <div class="text-center">
+      <div class="social-media text-center">
         <a href="http://www.facebook.com/pages/Unknown-Horizons/316760965546"><i class="fa fa-facebook"></i></a>
         <a href="http://twitter.com/uhorizons"><i class="fa fa-twitter"></i></a>
         <a href="http://youtube.com/unknownhorizonsgame"><i class="fa fa-youtube"></i></a>
