--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="container">
-    <div class="row homepage-main-points"> style="text-align:center"
+    <div class="row homepage-main-points">
       <div class="col-lg-4">
         <h2>Support</h2>
         <p>
