Add link to forum in header navigation

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,8 @@
             ['/media', 'Media'],
             ['/downloads', 'Downloads'],
             ['/get-involved', 'Get involved'],
-            ['/support/', 'Support']
+            ['/support/', 'Support'],
+            ['https://forum.unknown-horizons.org/', 'Forum']
           ] %}
             <li{% if this.is_child_of(href) %} class="active"{% endif
               %}><a href="{{ href|url }}">{{ title }}</a></li>
