Fix link to forum
Apparantly the url template filter should only be used for relative
URLs.

Closes: #10

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,11 +32,13 @@
             ['/downloads', 'Downloads'],
             ['/get-involved', 'Get involved'],
             ['/support/', 'Support'],
-            ['https://forum.unknown-horizons.org/', 'Forum']
           ] %}
             <li{% if this.is_child_of(href) %} class="active"{% endif
               %}><a href="{{ href|url }}">{{ title }}</a></li>
           {% endfor %}
+          <li>
+            <a href="https://forum.unknown-horizons.org/">Forum</a>
+          </li>
         </ul>
       </div>
     </div>
