disable forum link

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,9 +36,9 @@
             <li{% if this.is_child_of(href) %} class="active"{% endif
               %}><a href="{{ href|url }}">{{ title }}</a></li>
           {% endfor %}
-          <li>
-            <a href="https://forum.unknown-horizons.org/">Forum</a>
-          </li>
+#          <li>
+#            <a href="https://forum.unknown-horizons.org/">Forum</a>
+#          </li>
         </ul>
       </div>
     </div>
@@ -56,7 +56,7 @@
       </div>
       <p class="copyright">
         <small>
-          &copy; Copyright 2017 by The Unknown Horizons Developers.
+          &copy; Copyright 2017-2019 by The Unknown Horizons Developers.
         </small>
       </p>
     </div>
