--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
     <h1>Page Not Found</h1>
     <p style="max-width: 30em" class="center-block">
       The page you requested does not exist. Maybe it has been removed or deleted or you made a
-      typo when copy/pasting or typing it. If you think this is a mistake you can
+      typo when copy/pasting or typing it. If you think this is a mistake, you can
       <a href="https://github.com/unknown-horizons/unknown-horizons.github.io/issues/new">report it here</a>.
     </p>
   </div>
