--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,11 +49,10 @@
         <a href="http://www.facebook.com/pages/Unknown-Horizons/316760965546"><i class="fa fa-facebook"></i></a>
         <a href="http://twitter.com/uhorizons"><i class="fa fa-twitter"></i></a>
         <a href="http://youtube.com/unknownhorizonsgame"><i class="fa fa-youtube"></i></a>
-        <a href="https://plus.google.com/105947912016808272158?prsrc=3"><i class="fa fa-google-plus"></i></a>
       </div>
       <p class="copyright">
         <small>
-          &copy; Copyright 2017-2019 by The Unknown Horizons Developers.
+          Copyright &copy; 2008 - 2020 by The Unknown Horizons Developers.
         </small>
       </p>
     </div>
