Added information about godot port.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,6 +22,7 @@
       <h2>Open Source</h2>
       <p>
         The code is available under the <b>GPL v2</b> and content is mostly licenced as <b>CC-BY-SA</b>. Written in Python using FIFE.
+        We are working on an Port of Unknown-Horizons to the Godot Engine.
       </p>
       <p>
         <iframe src="https://ghbtns.com/github-btn.html?user=unknown-horizons&repo=unknown-horizons&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
