remove irc infos because the godot dev team uses discord.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -35,7 +35,7 @@
       <div class="col-lg-4">
         <h2>Support</h2>
         <p>
-          Need help running <em>Unknown Horizons</em>? Read our FAQ, the most common questions are answered there. Need further help? Join us on IRC: #unknown-horizons @ irc.freenode.net
+          Need help running <em>Unknown Horizons</em>? Read our FAQ, the most common questions are answered there. Need further help? Join us on [Discord](https://discord.gg/VX6m2ZX)
         </p>
         <a href="/support/">Read more</a>
       </div>
