Fix copyright year. Add discord and irc link

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,10 +49,12 @@
         <a href="http://www.facebook.com/pages/Unknown-Horizons/316760965546"><i class="fa fa-facebook"></i></a>
         <a href="http://twitter.com/uhorizons"><i class="fa fa-twitter"></i></a>
         <a href="http://youtube.com/unknownhorizonsgame"><i class="fa fa-youtube"></i></a>
+        <a href="https://discord.gg/VX6m2ZX"><i class="fa fa-discord"></i></a>
+        <a href="https://kiwiirc.com/nextclient/irc.libera.chat/#unknown-horizons"><i class="fa fa-irc"></i></a>
       </div>
       <p class="copyright">
         <small>
-          Copyright &copy; 2008 - 2020 by The Unknown Horizons Developers.
+          Copyright &copy; 2008 - 2022 by The Unknown Horizons Developers.
         </small>
       </p>
     </div>
