--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,12 +21,14 @@
     <div class="container">
       <h2>Open Source</h2>
       <p>
-        The code is available under the <b>GPL v2</b> and content is mostly licenced as <b>CC-BY-SA</b>. Written in Python using FIFE.
-        We are working on an Port of Unknown-Horizons to the Godot Engine.
+        The code is available under the <b>GPL v2</b> and the content is mostly licenced as <b>CC-BY-SA</b>. Written in Python using FIFE.
       </p>
-      <p>
-        <iframe src="https://ghbtns.com/github-btn.html?user=unknown-horizons&repo=unknown-horizons&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
-      </p>
+      <p>We are working on a port of Unknown Horizons to the Godot Engine.</p>
+      <div>
+        <p>
+        <iframe src="https://ghbtns.com/github-btn.html?user=unknown-horizons&repo=unknown-horizons&type=star&count=true" frameborder="0" scrolling="0" width="9%" height="20" title="GitHub"></iframe>
+        </p>
+      </div>
     </div>
   </div>
 
@@ -35,14 +37,14 @@
       <div class="col-lg-4">
         <h2>Support</h2>
         <p>
-          Need help running <em>Unknown Horizons</em>? Read our <a href="https://github.com/unknown-horizons/unknown-horizons/wiki/FAQ">FAQ</a>, the most common questions are answered there. Need further help? Join us on Discord https://discord.gg/VX6m2ZX
+          Need help running <em>Unknown Horizons</em>? Read our <a href="https://github.com/unknown-horizons/unknown-horizons/wiki/FAQ">FAQ</a>, the most common questions are answered there. Need further help? Join us on <a href="https://discord.gg/VX6m2ZX/">Discord</a>.
         </p>
         <a href="/support/">Read more</a>
       </div>
       <div class="col-lg-4">
         <h2>Get Involved</h2>
         <p>
-          We are constantly searching for people that are interested in joining the <em>Unknown Horizons</em> development team. We have something for everyone: Graphics, Programming, Game Design, Community Management and much more.
+          We appreciate any help in contributing to the <em>Unknown Horizons</em> project. There are various areas one can work on: graphics, programming, game design, community management...
         </p>
         <a href="/get-involved/">Read more</a>
       </div>
