--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -2,6 +2,21 @@
 {% from "macros/blog.html" import render_blog_post %}
 {% block title %}{{ this.title }}{% endblock %}
 {% block body %}
+  <style>
+    ul, ol {
+        list-style-image: url('/static/bullet.png');
+        list-style-position: inside;
+        padding-left: 2px;
+    }
+    /*img {
+        border: 1px solid grey;
+        border-radius: 4px;
+    }
+    img:hover {
+        box-shadow: 0 0 2px 1px black;
+    }*/
+  </style>
+
   <div class="container">
     {{ render_blog_post(this) }}
   </div>
